k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: med-erp

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: 261945560801.dkr.ecr.us-east-1.amazonaws.com/med-erp/order-service:latest
          ports:
            - containerPort: 8083
          
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"  
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: med-erp

spec:
  selector:
    app: order-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
