k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: med-erp

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: 261945560801.dkr.ecr.us-east-1.amazonaws.com/med-erp/product-service:latest
          ports:
            - containerPort: 8082
          
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"  
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: med-erp
  
spec:
  selector:
    app: product-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
